2012-05-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Display error if zoneinfo directory cannot be found.
	* Source/CFCalendar.c: Fix CFCalendarGetTimeRangeOfUnit().
	* Tests/CFArray/mutablearray.m:
	* Tests/CFAttributedString/general.m:
	* Tests/CFBinaryHeap/general.m: Avoid compiler warnings.
	* Tests/CFCalendar/basic.m:
	* Tests/CFNumberFormatter/parse.m:
	* Tests/CFNumber/general.m:
	* Tests/CFLocale/displayvalues.m:
	* Tests/CFURL/create.m: Fix tests based on results from OS X.

2012-05-05 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure:
	* configure.ac: Add test for zoneinfo directory.
	* Source/tzfile.h: Remove TZDIR define.
	* Source/config.h.in: Add TZDIR define based on configure's findings.
	* Source/CFTimeZone.c: Search for 
	* Tests/CFTimeZone/general.m: Added a few new tests to CFTimeZone.

2012-05-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFAttributedString.c: Implement CFAttributedStringCreate().
	* Tests/CFAttributedString/: Add simple tests.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Fix incompatibility in retain/release.
	* Source/CFLocale.c:
	* Source/CFNumberFormatter.c: Do not release NULL pointer.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Correctly generate time zone data.
	* Source/CFCalendar.c: Use CFTimeZone when opening a new calendar.
	* Tests/CFCalendar/basic.m:
	* Tests/CFLocale/displayvalues.m:
	* Tests/CFURL/create.m: Fix tests.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Pass correct data size.
	* Tests/CFTimeZone/basic.m: Fix tests.
	* Tests/CFLocale/values.m: Fix error in previous commit.

2012-04-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Correctly calculate GMT offset for zone name.
	* Source/CFDateFormatter.c: Reset formatter before using it.
	* Source/CFStringUtilities.c: Fix bug in find utility.

2012-04-26 Stefan Bidigaray <stefanbidi@gmail.com>
